# keyphrase-extraction-tools

./: .gitignore  Dockerfile  Dockerfile.simple  README.md  docker-compose.simple.yml  docker-compose.yml  pyproject.toml
app/run/: main.py
app/run/.streamlit/: config.toml
