[tool.poetry]
name = "ket"
version = "0.1.0"
description = "Keyphrase Extraction Tools"
authors = ["kam6ri <uesmgn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
pandas = "^1.4.2"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
plotly = "^5.6.0"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
spacy = "^3.2.4"
ginza = "^5.1.1"
ja-ginza = "^5.1.0"
mecab-python3 = "^1.0.5"
nltk = "^3.7"
pke = {git = "https://github.com/boudinfl/pke.git"}
networkx = "^2.7.1"
future = "^0.18.2"
Unidecode = "^1.3.4"

[tool.poetry.group.app]

[tool.poetry.group.app.dependencies]
streamlit = "^1.8.1"

[tool.poetry.group.jupyter]

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^3.3.2"

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
